changed dark pink theme to different shade to fix contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
 }
 
 .react-multiple-carousel__arrow {
-  background: #d14267 !important;
+  background: #D03E65 !important;
 }
 .react-multiple-carousel__arrow:disabled {
   opacity: 0.3;
